<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComprobanteActivity">


    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="625dp"
        android:orientation="vertical"
        android:paddingTop="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrar_titulo"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/txtIdComprobante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_id"
        />

        <EditText
            android:id="@+id/edtIdComprobante"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:id="@+id/txtComprobanteFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_fechapago" />

        <EditText
            android:id="@+id/edtComprobanteFP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/txtTipoReclamoEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/lbl_idpedido" />


        <EditText
            android:id="@+id/edtComprobantePedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/txtTipoReclamoFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_idcliente" />

        <EditText
            android:id="@+id/edtComprobanteCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lblComprobanteUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_idusuario" />

        <Spinner
            android:id="@+id/spnComprobanteUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_usuario"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/btnComprobanteRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#2196F3"
            android:text="@string/btn_registra"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>